Container/Kubernetes/k3s-soniiit/NGINX-Web/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.your-domain.net`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.your-domain.net`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: your-domain-net-production-tls
